k8s/nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-volume
              mountPath: /usr/src/django-admin-example/staticfiles
            - name: media-volume
              mountPath: /usr/src/django-admin-example/media
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-pvc
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-pvc
        - name: nginx-config
          configMap:
            name: nginx-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
