k8s/postgres-db-deploy.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresdb
spec:
  serviceName: postgresdb
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgresdb
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresdb-vol
              mountPath: /var/lib/postgresql/data
              subPath: "pgdata"
            - name: dbcreation-script
              mountPath: /docker-entrypoint-initdb.d
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - pg_isready -U $(POSTGRES_USER) -d $(POSTGRES_DB)
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: postgresdb-vol
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: dbcreation-script
          configMap:
            name: dbcreation-script
---
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
spec:
  selector:
    app: postgresdb
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  clusterIP: None
